<resources>
    <string name="app_name">Stockbit Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="atau">Atau</string>
    <string name="masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="username_or_email">Username or Email</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <string name="belum_punya_kaun">Belum punya kaun?</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="watchlist">Watchlist</string>
    <string name="stream">Stream</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="portofolio">Portofolio</string>
    <string name="add_symbol">Add Symbol</string>
    <string name="error_msg_no_biometric_hardware">No biometric hardware supported</string>
    <string name="error_msg_biometric_hw_unavailable">Biometric Unvailable</string>
    <string name="error_msg_biometric_not_setup">Biometric Notstup</string>
    <string name="auth_title">Login</string>
    <string name="auth_subtitle">Login with fingerprint</string>
    <string name="error_msg_auth_error">Authentification Error</string>
    <string name="error_msg_auth_failed">Authentification Fail</string>

    <string-array name="spinner">
        <item>All Watchlist</item>
    </string-array>
</resources>